--- a/sw/src/app/partials/config.html
+++ b/sw/src/app/partials/config.html
@@ -1,7 +1,7 @@
 <div ng-show="loading">
     Lade Daten...
 </div>
-<form class="form-horizontal app-weekly-set" ng-show="!loading">
+<form name="configForm" class="form-horizontal app-weekly-set" ng-show="!loading">
     <ul class="nav nav-tabs">
         <li ng-repeat="set in config.weekly.sets" bs-active="set == currentWeeklySet">
             <a onclick="return false" ng-click="setCurrentWeeklySet(set)">
@@ -17,7 +17,7 @@
             <div class="control-group">
                 <label class="control-label">Name:</label>
                 <div class="controls">
-                    <input type="text" ng-model="currentWeeklySet.name" />
+                    <input type="text" ng-model="currentWeeklySet.name" required />
                 </div>
             </div>
             <div class="app-horizontal-line-dotted"></div>
@@ -25,8 +25,8 @@
                 <label class="control-label">{{ $index | app.weekday }}:</label>
                 <div class="controls">
                     <div ng-repeat="interval in intervals" class="app-interval">
-                        <input type="text" ng-model="interval.start" ng-pattern="intervalPattern" class="time" /> -
-                        <input type="text" ng-model="interval.stop" ng-pattern="intervalPattern" class="time" />
+                        <input type="text" ng-model="interval.start" ng-pattern="intervalPattern" class="time" required /> -
+                        <input type="text" ng-model="interval.stop" ng-pattern="intervalPattern" class="time" required />
                         <a class="app-interval-add" title="Heizzeit hinzufügen" ng-click="addInterval(intervals, $index)">&#x271a;</a>
                         <a class="app-interval-delete" title="Heizzeit entfernen" ng-click="deleteInterval(intervals, $index)">&#x2718;</a>
                     </div>
@@ -41,7 +41,7 @@
     </div>
 
     <div class="form-actions">
-        <button class="btn btn-primary" ng-click="update()">Alle Änderungen speichern</button>
+        <button class="btn btn-primary" ng-click="update()" ng-disabled="configForm.$invalid">Alle Änderungen speichern</button>
         <button class="btn" ng-click="cancel()">Abbrechen</button>
     </div>
 </form>
