--- a/sw/src/app/partials/main.html
+++ b/sw/src/app/partials/main.html
@@ -2,14 +2,13 @@
     Lade Daten...
 </div>
 <div ng-show="!loading">
-    <!--
-    <div class="btn-group app-toggle">
-        <button class="btn btn-primary" bs-active="!enabled" ng-click="setEnabled(false)">Aus</button>
-        <button class="btn btn-primary" bs-active="enabled" ng-click="setEnabled(true)">An</button>
+    <div class="btn-group">
+        <button class="btn" ng-class="modeButtonClass('on')" ng-click="changeMode('on')">Immer an</button>
+        <button class="btn" ng-class="modeButtonClass('off')" ng-click="changeMode('off')">Immer aus</button>
+        <button class="btn" ng-class="modeButtonClass('timed')" ng-click="changeMode('timed')">Zeitgesteuert</button>
     </div>
--->
 
-    <form class="form-inline">
+    <form class="form-inline app-active-weekly-set" ng-show="config.mode == 'timed'">
         <label>Aktive Konfiguration:</label>
         <select ng-options="s.name for s in config.weekly.sets" ng-model="activeWeeklySet"></select>
         <button ng-click="apply()" ng-show="showApplyButton()" class="btn btn-primary" ng-disabled="applying">Übernehmen</button>
