--- a/sw/src/app/index.html
+++ b/sw/src/app/index.html
@@ -19,7 +19,7 @@
                 <a class="brand" ng-click="changeView('/')">Heizung</a>
                 <ul class="nav">
                     <li bs-active="isLocation('/main')"><a ng-click="changeView('/main')">Übersicht</a></li>
-                    <li bs-active="isLocation('/config')"><a ng-click="changeView('/config')">Einstellungen</a></li>
+                    <li bs-active="isLocation('/config')"><a ng-click="changeView('/config')">Wochen-Konfigurationen</a></li>
                 </ul>
             </div>
         </div>
