Weekly config action buttons only show up when the form is dirty and hitting save or cancel does not change to main view

--- a/sw/src/app/partials/config.html
+++ b/sw/src/app/partials/config.html
@@ -40,8 +40,8 @@
         </div>
     </div>
 
-    <div class="form-actions">
+    <div class="form-actions" ng-show="isDirty()">
         <button class="btn btn-primary" ng-click="update()" ng-disabled="configForm.$invalid">Alle Änderungen speichern</button>
-        <button class="btn" ng-click="cancel()">Abbrechen</button>
+        <button class="btn" ng-click="cancel()">Alle Änderungen verwerfen</button>
     </div>
 </form>
